test/corpus/instance.txt
===============================
Packable instance
===============================

instance Packable [(a, b)] (Map a b) where
    source R from "foo.R"
        ( "packMap" as pack
        , "unpackMap" as unpack
        )
    pack = toList
    unpack = fromList

---

(source_file
  (instance
    class: (identifierU)
    param: (listType
      (tupleType
        generic: (identifier)
        generic: (identifier)))
    param: (paramT
      concrete: (identifierU)
      generic: (identifier)
      generic: (identifier))
    where: (implementation
      (source
        (language)
        sourceFile: (string)
        (sourceTerm
          name: (string)
          alias: (identifier))
        (sourceTerm
          name: (string)
          alias: (identifier)))
      (declaration
        lhs: (identifier)
        rhs: (identifier))
      (declaration
        lhs: (identifier)
        rhs: (identifier)))))
